[package]
name = "svc"
version = "0.1.0"
edition = "2024"

[dependencies]
bible = { git = "https://github.com/atecce/lib/", branch = "name" }
name = { git = "https://github.com/atecce/lib/", branch = "name" }
source = { git = "https://github.com/atecce/lib/", branch = "name" }
ctrlc = "3.5.2"
gline-rs = "1.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.149"
orp = "0.9.2"
